--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "DEBUG='flipstarter:*' node --use-strict server.js",
     "verbose": "DEBUG='flipstarter:*, -flipstarter:object' node --use-strict server.js",
@@ -21,5 +22,8 @@
     "express": "^4.17.1",
     "express-sse": "^0.5.1",
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
