--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "electrum-cash": "^1.0.0",
     "express": "^4.17.1",
     "express-sse": "^0.5.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "node-static": "^0.7.11"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
