Add front-end development files and documentation
flipstarter-frontend repository is no longer needed.
The necessary files to process frontend are in this repo.

--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "async-mutex": "^0.1.4",
     "better-sqlite3": "^5.4.3",
     "bitbox-sdk": "^8.11.2",
+    "canvas-confetti": "^1.2.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dompurify": "^2.0.11",
     "electrum-cash": "^1.0.0",
     "express": "^4.17.1",
     "express-sse": "^0.5.1",
+    "marked": "^1.1.0",
+    "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
-    "node-static": "^0.7.11"
+    "node-static": "^0.7.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
