--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "DEBUG='flipstarter:*' node --use-strict server.js",
     "verbose": "DEBUG='flipstarter:*, -flipstarter:object' node --use-strict server.js",
-    "start": "npx webpack -o static/js/application.js && DEBUG='flipstarter:status, flipstarter:server' node --use-strict server.js",
-    "start-no-debug": "npx webpack -o static/js/application.js && node --use-strict server.js"
+    "start": "npx webpack && DEBUG='flipstarter:status, flipstarter:server' node --use-strict server.js",
+    "start-no-debug": "npx webpack && node --use-strict server.js"
   },
   "author": "Jonathan Silverblood",
   "license": "MIT",
   "dependencies": {
-    "async-mutex": "^0.1.4",
+    "async-mutex": "^0.3.2",
     "better-sqlite3": "^7.4.3",
     "bitbox-sdk": "^8.11.2",
-    "canvas-confetti": "^1.2.0",
+    "canvas-confetti": "^1.4.0",
     "cors": "^2.8.5",
-    "debug": "^4.1.1",
-    "dompurify": "^2.0.12",
-    "electrum-cash": "^2.0.1",
+    "debug": "^4.3.2",
+    "dompurify": "^2.3.2",
+    "electrum-cash": "^2.0.8",
     "express": "^4.17.1",
-    "express-sse": "^0.5.1",
-    "marked": "^1.1.1",
+    "express-sse": "^0.5.3",
+    "marked": "^3.0.4",
     "materialize-css": "^1.0.0",
-    "moment": "^2.27.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "moment": "^2.29.1",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
