--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
