--- a/package.json
+++ b/package.json
@@ -15,24 +15,23 @@
   "author": "Jonathan Silverblood",
   "license": "MIT",
   "dependencies": {
+    "@bitauth/libauth": "^1.18.1",
     "async-mutex": "^0.3.2",
     "better-sqlite3": "^7.4.3",
-    "bitbox-sdk": "^8.11.2",
     "canvas-confetti": "^1.4.0",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
     "dompurify": "^2.3.2",
     "electrum-cash": "^2.0.8",
     "express": "^4.17.1",
-    "express-sse": "^0.5.1",
+    "express-sse": "0.5.1",
     "marked": "^3.0.4",
-    "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "multer": "^1.4.3"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^8.3.0"
   }
 }
