--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "express-sse": "0.5.1",
     "marked": "^3.0.4",
     "moment": "^2.29.1",
+    "multer": "^1.4.3",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "multer": "^1.4.3"
+    "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "^8.3.0"
