--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@bitauth/libauth": "^1.19.1",
     "async-mutex": "^0.3.2",
-    "better-sqlite3": "^7.4.3",
+    "better-sqlite3": "^9.0.0",
     "canvas-confetti": "^1.4.0",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
@@ -27,7 +27,7 @@
     "express-sse": "0.5.1",
     "marked": "^4.0.9",
     "moment": "^2.29.1",
-    "multer": "^1.4.3",
+    "multer": "^1.4.5-lts.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   },
